--- a/SaleSquared/src/Presentation_Layer/Header/Barra_Pesquisa.form
+++ b/SaleSquared/src/Presentation_Layer/Header/Barra_Pesquisa.form
@@ -28,7 +28,7 @@
                   </Group>
                   <Group type="102" attributes="0">
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                      <Component id="jButton2" min="-2" max="-2" attributes="0"/>
+                      <Component id="pesqavan" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -43,7 +43,7 @@
                   <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jButton2" min="-2" max="-2" attributes="0"/>
+              <Component id="pesqavan" min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -78,10 +78,13 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton2">
+    <Component class="javax.swing.JButton" name="pesqavan">
       <Properties>
         <Property name="text" type="java.lang.String" value="Pesquisa Avan&#xe7;ada"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pesqavanActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
